kubernetes/20-auth.yaml
<<<<<<< HEAD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: ntvs28/iprep-auth:1.0.0
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: ntvs28/iprep-auth:1.0.0
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ip-reputation
spec:
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
>>>>>>> 4aac0aa (Initial commit: IP Reputation Checker microservices + Kubernetes manifests)
