kubernetes/50-frontend.yaml
<<<<<<< HEAD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
        - name: frontend
          image: ntvs28/iprep-frontend:1.0.0
          ports:
            - containerPort: 80
          # Your nginx.conf inside the image must proxy to:
          #   http://api-service:8000/  and  http://auth-service:8001/
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  type: NodePort
  selector:
    app: frontend-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080   # use http://127.0.0.1:30080/
=======
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
        - name: frontend
          image: ntvs28/iprep-frontend:1.0.0
          ports:
            - containerPort: 80
          # Your nginx.conf inside the image must proxy to:
          #   http://api-service:8000/  and  http://auth-service:8001/
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: ip-reputation
spec:
  type: NodePort
  selector:
    app: frontend-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080   # use http://127.0.0.1:30080/
>>>>>>> 4aac0aa (Initial commit: IP Reputation Checker microservices + Kubernetes manifests)
